# script-various-dispatch-python

./: README.md  demo.py  pyproject.toml
requirements/: README.md  base.txt  dev.txt
src/: main.py
src/disp_algorithms/: __init__.py  fifo_disp.py  priority_disp.py  round_robin_fifo_disp.py  sjf_disp.py
tests/: README.md  run_all_tests.py  test_fifo.py  test_priority.py  test_sjf.py
